tests/scripts/errors/runtime/dot_on_null.cdo
VAR x = NULL;
print(x.field);
